# studyflow-ai

./: .env.example  .gitignore  AUDIT_REPORT.md  CONTRIBUTING.md  CUsersyoshiOneDriveDesktopthestudyflowbackendtestsconftest.py  CUsersyoshiOneDriveDesktopthestudyflowbackendteststest_ai_agents.py  CUsersyoshiOneDriveDesktopthestudyflowbackendteststest_hybrid_rag.py  Dockerfile  LICENSE  README.md  files.txt  lint-staged.config.js  next.config.ts  nixpacks.toml  package-lock.json  package.json  pyproject.toml  test-gradio.mjs  test_final.js  test_final_edge.js  test_hercai.js  test_hf_cors.js  test_poll.mjs  test_railway.js  test_railway_fixed.js  test_vercel.js
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  huggingface.yml  sync-master.yml
backend/: .coverage  .env.example  Dockerfile  pyproject.toml  requirements.txt  test_hf.py  test_imagen.py
backend/app/: main.py
backend/app/api/: endpoints.py
backend/app/core/: config.py  db.py  security.py
backend/app/routers/: analytics.py  auth.py  chat.py  documents.py  flashcards.py  mindmap.py  notes.py  planner.py  quizzes.py
backend/app/services/: ai_agents.py  ai_service.py  auth.py  chunker.py  document_service.py  hybrid_rag.py  pdf_parser.py  rag_service.py
backend/tests/: __init__.py  conftest.py  test_ai_agents.py  test_ai_features.py  test_auth.py  test_chat.py  test_config.py  test_documents.py  test_health.py  test_rag.py
backend/the_study_flow_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: API.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  SECURITY.md  architecture.md
frontend/: eslint.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts  test-gradio.mjs  test_corsproxy.py  test_edge.js  test_final_node.js  test_gemini.mjs  test_gemini_models.mjs  vitest.config.mts
frontend/app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/components/: AppInitializer.tsx  CommandPalette.tsx  DocumentUpload.tsx  GlassCard.tsx  GoogleIcon.tsx  Logo.tsx  NotificationCenter.tsx  QueryProvider.tsx  ThemeSwitcher.tsx
frontend/e2e/: README.md  analytics.spec.ts  auth.spec.ts  chat.spec.ts  flashcards.spec.ts  mindmap.spec.ts  note.spec.ts  planner.spec.ts  upload.spec.ts
frontend/hooks/: useAuth.ts
frontend/lib/: axios.ts  supabase.ts
frontend/public/: auth.md  test_pollinations.html
frontend/store/: useStore.ts
frontend/tests/: package-lock.json  package.json  setup.ts  setup.tsx  vitest.config.ts
scripts/: deploy_verify.py  init_db.sql  prod_verify.py
src/: middleware.ts
src/app/: layout.tsx  page.tsx  sitemap.ts
src/components/: AITutorBubble.tsx  FileUploader.tsx  OnboardingModal.tsx  ProfileModal.tsx  Sidebar.tsx
src/lib/: api.ts  db.ts
src/store/: studyStore.ts
(+95 files in other folders)
