[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "the-study-flow-backend"
version = "1.0.0"
description = "Backend services for The Study Flow academic productivity platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.8",
    "uvicorn==0.34.0",
    "pymupdf==1.25.2",
    "rank_bm25==0.2.2",
    "python-dotenv==1.0.1",
    "google-generativeai==0.8.4",
    "supabase==2.11.0",
    "pydantic==2.10.6",
    "pydantic-settings==2.2.1",
    "PyJWT==2.8.0",
    "python-multipart==0.0.9",
    "sse-starlette==2.1.3",
    "pytesseract==0.3.10",
    "slowapi==0.1.9",
    "httpx==0.28.1",
    "email-validator==2.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["scratch*", "tests*"]

[project.optional-dependencies]
dev = [
    "pytest==8.0.2",
    "pytest-asyncio==0.23.5",
    "pytest-cov==6.1.1",
    "pytest-mock==3.14.0",
    "httpx==0.28.1",
    "faker==25.0.0",
    "black==24.2.0",
    "ruff==0.3.0",
    "mypy==1.8.0",
    "types-pytesseract==0.3.10",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--tb=short",
    "-ra",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-fail-under=70",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests requiring database",
    "slow: Slow running tests",
    "rag: RAG evaluation tests",
]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.venv
  | __pycache__
  | \.git
  | \.mypy_cache
  | \.pytest_cache
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by Black)
    "B008",  # do not perform function calls in argument defaults
]
per-file-ignores = { "tests/*" = ["S101", "S106"] }

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
exclude = [
    "\\.venv",
    "tests",
]

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]